crates/ariadne-mcp/tests/snapshots/tools_hotspots__hotspots_symbol_grain.snap
---
source: crates/ariadne-mcp/tests/tools_hotspots.rs
expression: golden
---
{
  "rows": [
    {
      "churn": 5,
      "complexity": 7,
      "file": "",
      "score": 1.0,
      "symbol": {
        "file": "src/alpha.rs",
        "kind": "function",
        "name": "crate::alpha"
      }
    },
    {
      "churn": 2,
      "complexity": 3,
      "file": "",
      "score": 0.17142858,
      "symbol": {
        "file": "src/beta.rs",
        "kind": "function",
        "name": "crate::beta"
      }
    }
  ]
}
